# Synapsis

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  chat.cpp  chat.h  errors.cpp  errors.h  files.cpp  files.h  formatting.cpp  formatting.h  main  main.cpp  makefile  menu.cpp  menu.h  notes.h  profile.cpp  profile.h  wearher.h  weather.cpp  welcome.cpp  welcome.h
SYNAPSIS_Development_Unix/: README.md  SYNAPSIS  files.cpp  main  makefile  profile.cpp  profile.h  user_data.txt  welcome.cpp
SYNAPSIS_Release_Unix/: formatting.h  menu.h  profile.cpp
